--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -11,15 +11,17 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Latest Articles<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/">Latest Articles<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Saved Articles</a>
+                    <a class="nav-link" href="/saved">Saved Articles</a>
                 </li>
-                <li class="nav-item">
+                {{!-- <li class="nav-item">
                     <a class="nav-link disabled" href="#">Disabled</a>
-                </li>
+                </li> --}}
             </ul>
+
+            <a class = "btn btn-primary navbar-btn scrape-articles">Scrape New Articles</a>
 
             <!-- <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search">
